--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://3.85.40.239:9000/</sonar.host.url> 
-		<sonar.login>ffbb2e1258c2bcb686e7ea89b1766357dc4a2d9c</sonar.login>
-		<!-- <sonar.password>admin</sonar.password> -->
+		<sonar.login>admin</sonar.login>
+		 <sonar.password>admin</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
